--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />    
+    <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="./logo_ves.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Volley Express Shop</title>
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
+    <!-- 👇 ruta relativa, no /src/main.js -->
+    <script type="module" src="./src/main.js"></script>
   </body>
 </html>
