--- a/index.html
+++ b/index.html
@@ -1,55 +1,33 @@
 <!doctype html>
 <html lang="es">
   <head>
-    <!-- =========================
-         BASE TÉCNICA
-    ========================== -->
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
     <!-- VIEWPORT OPTIMIZADO -->
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, viewport-fit=cover"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
 
     <!-- FAVICON -->
     <link rel="icon" type="image/png" href="./logo_ves.png" />
 
-    <!-- =========================
-         SEO MASTER
-    ========================== -->
-    <title>
-      Implementos de Voleibol Profesionales | Volley Express Shop Colombia
-    </title>
+    <title>Implementos de Voleibol Profesionales | Volley Express Shop Colombia</title>
 
     <meta
       name="description"
       content="Compra implementos profesionales de voleibol en Volley Express Shop. Balones, accesorios y equipamiento de alto rendimiento. Envíos a toda Colombia."
     />
 
-    <!-- CANONICAL (Netlify) -->
-    <link
-      rel="canonical"
-      href="https://www.volleyexpressshop.com/"
-    />
+    <link rel="canonical" href="https://www.volleyexpressshop.com/" />
 
-    <!-- ROBOTS -->
     <meta
       name="robots"
       content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1"
     />
 
-    <!-- =========================
-         GEO & IDIOMA (SEO LOCAL COLOMBIA)
-    ========================== -->
     <meta name="geo.region" content="CO" />
     <meta name="geo.placename" content="Colombia" />
     <meta name="language" content="Spanish" />
 
-    <!-- =========================
-         OPEN GRAPH (SOCIAL SEO)
-    ========================== -->
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="es_CO" />
     <meta
@@ -60,40 +38,22 @@
       property="og:description"
       content="Tienda especializada en voleibol: balones, accesorios y equipamiento profesional. Compra fácil y rápida."
     />
-    <meta
-      property="og:url"
-      content="https://www.volleyexpressshop.com/"
-    />
-    <meta
-      property="og:image"
-      content="https://www.volleyexpressshop.com/og-image.jpg"
-    />
+    <meta property="og:url" content="https://www.volleyexpressshop.com/" />
+    <meta property="og:image" content="https://www.volleyexpressshop.com/og-image.jpg" />
 
-    <!-- =========================
-         TWITTER CARD
-    ========================== -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta
-      name="twitter:title"
-      content="Implementos de Voleibol | Volley Express Shop"
-    />
+    <meta name="twitter:title" content="Implementos de Voleibol | Volley Express Shop" />
     <meta
       name="twitter:description"
       content="Compra implementos de voleibol profesionales con envío en Colombia."
     />
 
-    <!-- =========================
-         PERFORMANCE (NETLIFY + VITE)
-    ========================== -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-
   </head>
 
   <body>
     <div id="app"></div>
-
-    <!-- ENTRY POINT -->
-    <script type="module" src="./src/main.js"></script>
+    <script type="module" src="/src/main.js"></script>
   </body>
 </html>
