--- a/index.html
+++ b/index.html
@@ -1,59 +1,114 @@
 <!doctype html>
-<html lang="es">
+<html lang="es-CO">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-    <!-- VIEWPORT OPTIMIZADO -->
+    <!-- VIEWPORT -->
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
 
-    <!-- FAVICON -->
-    <link rel="icon" type="image/png" href="./logo_ves.png" />
+    <!-- THEME COLOR (PWA/UX en móvil) -->
+    <meta name="theme-color" content="#1A3012" />
 
-    <title>Implementos de Voleibol Profesionales | Volley Express Shop Colombia</title>
+    <!-- FAVICON (desde /public => raíz) -->
+    <link rel="icon" type="image/png" href="/logo_ves.png" />
 
+    <!-- TITLE (Medellín + intención de compra) -->
+    <title>Implementos de Voleibol en Medellín | Balones y Accesorios | Volley Express Shop</title>
+
+    <!-- DESCRIPTION (local + categorías) -->
     <meta
       name="description"
-      content="Compra implementos profesionales de voleibol en Volley Express Shop. Balones, accesorios y equipamiento de alto rendimiento. Envíos a toda Colombia."
+      content="Compra implementos de voleibol en Medellín: balones, rodilleras, mangas, infladores y accesorios. Atención rápida por WhatsApp y entrega en Medellín y Área Metropolitana."
     />
 
+    <!-- CANONICAL -->
     <link rel="canonical" href="https://www.volleyexpressshop.com/" />
 
-    <meta
-      name="robots"
-      content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1"
-    />
+    <!-- ROBOTS -->
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
 
-    <meta name="geo.region" content="CO" />
-    <meta name="geo.placename" content="Colombia" />
+    <!-- GEO (no es factor fuerte hoy, pero si lo usas, úsalo bien) -->
+    <meta name="geo.region" content="CO-ANT" />
+    <meta name="geo.placename" content="Medellín, Antioquia" />
     <meta name="language" content="Spanish" />
 
+    <!-- OPEN GRAPH -->
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="es_CO" />
-    <meta
-      property="og:title"
-      content="Implementos de Voleibol Profesionales | Volley Express Shop"
-    />
+    <meta property="og:site_name" content="Volley Express Shop" />
+    <meta property="og:url" content="https://www.volleyexpressshop.com/" />
+    <meta property="og:title" content="Implementos de Voleibol en Medellín | Volley Express Shop" />
     <meta
       property="og:description"
-      content="Tienda especializada en voleibol: balones, accesorios y equipamiento profesional. Compra fácil y rápida."
+      content="Balones, rodilleras, mangas y accesorios de voleibol. Atención por WhatsApp y entrega en Medellín y Área Metropolitana."
     />
-    <meta property="og:url" content="https://www.volleyexpressshop.com/" />
-    <meta property="og:image" content="https://www.volleyexpressshop.com/og-image.jpg" />
+    <!-- Debe existir -->
+    <meta property="og:image" content="https://www.volleyexpressshop.com/og-image.webp" />
+    <meta property="og:image:alt" content="Volley Express Shop Medellín - Implementos de voleibol" />
 
+    <!-- TWITTER -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Implementos de Voleibol | Volley Express Shop" />
+    <meta name="twitter:title" content="Implementos de Voleibol en Medellín | Volley Express Shop" />
     <meta
       name="twitter:description"
-      content="Compra implementos de voleibol profesionales con envío en Colombia."
+      content="Compra balones y accesorios de voleibol en Medellín. Atención rápida por WhatsApp y entrega local."
     />
+    <meta name="twitter:image" content="https://www.volleyexpressshop.com/og-image.webp" />
 
+    <!-- PERFORMANCE -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <!-- JSON-LD: LocalBusiness + Store (enfocado a Medellín) -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": ["SportsStore", "LocalBusiness"],
+        "name": "Volley Express Shop",
+        "url": "https://www.volleyexpressshop.com/",
+        "image": "https://www.volleyexpressshop.com/og-image.webp",
+        "description": "Tienda de implementos de voleibol en Medellín: balones, rodilleras, mangas y accesorios. Atención por WhatsApp y entrega en Medellín y Área Metropolitana.",
+        "areaServed": [
+          {
+            "@type": "City",
+            "name": "Medellín",
+            "containedInPlace": { "@type": "AdministrativeArea", "name": "Antioquia" }
+          },
+          {
+            "@type": "AdministrativeArea",
+            "name": "Área Metropolitana del Valle de Aburrá"
+          }
+        ],
+        "address": {
+          "@type": "PostalAddress",
+          "addressLocality": "Medellín",
+          "addressRegion": "Antioquia",
+          "addressCountry": "CO"
+        },
+        "telephone": "+57 300 431 1280",
+        "contactPoint": [
+          {
+            "@type": "ContactPoint",
+            "telephone": "+57 300 431 1280",
+            "contactType": "customer service",
+            "availableLanguage": ["es"]
+          }
+        ],
+        "sameAs": [],
+        "potentialAction": {
+          "@type": "ContactAction",
+          "name": "Comprar por WhatsApp",
+          "target": "https://wa.me/573004311280?text=Hola,%20estoy%20en%20Medell%C3%ADn.%20Quiero%20cotizar%20implementos%20de%20voleibol."
+        }
+      }
+    </script>
   </head>
 
   <body>
     <div id="app"></div>
+
+    <!-- ENTRY POINT -->
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
