--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     />
 
     <!-- CANONICAL -->
-    <link rel="canonical" href="https://www.volleyexpresshop.com/" />
+    <link rel="canonical" href="https://volleyexpresshop.com/" />
 
     <!-- ROBOTS -->
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
