--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="es_CO" />
     <meta property="og:site_name" content="Volley Expres Shop" />
-    <meta property="og:url" content="https://www.volleyexpresshop.com/" />
+    <meta property="og:url" content="https://volleyexpresshop.com/" />
     <meta property="og:title" content="Implementos de Voleibol en Medellín | Volley Expres Shop" />
     <meta
       property="og:description"
       content="Balones, rodilleras, mangas y accesorios de voleibol. Atención por WhatsApp y entrega en Medellín y Área Metropolitana."
     />
     <!-- Debe existir -->
-    <meta property="og:image" content="https://www.volleyexpresshop.com/og-image.webp" />
+    <meta property="og:image" content="https://volleyexpresshop.com/og-image.webp" />
     <meta property="og:image:alt" content="Volley Expres Shop Medellín - Implementos de voleibol" />
 
     <!-- TWITTER -->
@@ -54,7 +54,7 @@
       name="twitter:description"
       content="Compra balones y accesorios de voleibol en Medellín. Atención rápida por WhatsApp y entrega local."
     />
-    <meta name="twitter:image" content="https://www.volleyexpresshop.com/og-image.webp" />
+    <meta name="twitter:image" content="https://volleyexpresshop.com/og-image.webp" />
 
     <!-- PERFORMANCE -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -66,8 +66,8 @@
         "@context": "https://schema.org",
         "@type": ["SportsStore", "LocalBusiness"],
         "name": "Volley Expres Shop",
-        "url": "https://www.volleyexpresshop.com/",
-        "image": "https://www.volleyexpresshop.com/og-image.webp",
+        "url": "https://volleyexpresshop.com/",
+        "image": "https://volleyexpresshop.com/og-image.webp",
         "description": "Tienda de implementos de voleibol en Medellín: balones, rodilleras, mangas y accesorios. Atención por WhatsApp y entrega en Medellín y Área Metropolitana.",
         "areaServed": [
           {
