--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="es-CO">
   <head>
     <meta charset="UTF-8" />
+    <meta name="google-site-verification" content="PEGA_AQUI_EL_CODIGO_REAL_DE_SEARCH_CONSOLE" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
     <!-- VIEWPORT -->
